@@ -16,6 +16,8 @@ Current Version (SVN trunk):
 
 - Fixed a couple of issues with Oracle Spatial and single pass queries (#3069)
 
+- Added layer.resultsGetShape() to PHP MapScript for use with queries (#3069)
+
 - Fixed query maps under the new single pass query process (#3069)
 
 - WFS Client seg fault (OGR layer not opened) (#3136)
